Fix text wrapping issue with confirm password label

--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ fieldset {
    flex-direction: column;
    width: 40%;
    margin: 1rem 0;
+   white-space: nowrap;
 }
 
 form input {
@@ -103,6 +104,7 @@ form input {
    border-radius: 4px;
    padding: 0.5rem;
    font-size: 1rem;
+   margin-top: 0.2rem;
 }
 
 #createAccount {
@@ -119,7 +121,7 @@ form input {
 
 .log-in {
    font-weight: bold;
-   margin-top: 1rem;
+   margin-top: 2rem;
 }
 
 .log-in a {
